--- a/styles.css
+++ b/styles.css
@@ -1,53 +1,188 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
+*{
     padding: 0;
-    background-color: #f0f0f0;
+    margin: 0;
+    border: 0;
 }
+*,*::before,*::after{
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+:focus,:active{outline: none;}
+a:focus,a:active{outline: none;}
 
+nav,footer,header,aside{display: block;}
+
+html,body{
+    height: 100%;
+    width: 100%;
+    font-size: 100%;
+    line-height: 1;
+    font-size: 14px;
+    text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    -moz-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+input,button,textarea{font-family: inherit;}
+
+input::-ms-clear{display: none;}
+button{cursor: pointer;}
+button::-moz-focus-inner {padding:0;border:0;}
+a, a:visited{text-decoration: none;}
+a:hover{text-decoration: none;}
+ul li{list-style: none;}
+img{vertical-align: top;}
+
+h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
+/*=======================================================================================================*/
+
+:root {
+    --color1: #F78888;
+    --color2: #F3D250;
+    --color3: #ECECEC;
+    --color4: #88BDBC;
+    --color5: #0000006a;
+  }
+
+body {
+    background-image: url(./fon/fon.png);
+    font-family: Arial, sans-serif;
+}
 header {
-    background: #333;
-    color: #fff;
-    padding: 10px 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: var(--color5);
+    /* color: #fff; */
+    width: 100%;
+    height: 70px;
+    /* border: 1px solid red; */
 }
-
 nav {
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    gap: 30px;
+    width: 95%;
+    /* border: 1px solid red; */
 }
-
 button {
     background: none;
     border: none;
-    color: #fff;
-    font-size: 20px;
-    margin-right: 15px;
+    color: var(--color3);
+    font-size: 25px;
     cursor: pointer;
 }
-
 button:hover {
-    color: #ccc;
+    color: var(--color5);
+}
+.note-color_white,
+.note-color_red,
+.note-color_yellow,
+.note-color_green {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+}
+.note-color_white:hover,
+.note-color_red:hover,
+.note-color_yellow:hover,
+.note-color_green:hover {
+    border: 2px solid var(--color5);
+}
+.note-color_white {
+    background-color: var(--color3);
+}
+.note-color_red {
+    background-color: var(--color1);
+}
+.note-color_yellow {
+    background-color: var(--color2);
+}
+.note-color_green {
+    background-color: var(--color4);
 }
 
 input[type="text"] {
-    padding: 5px;
+    border-radius: 5px;
+    width: 30%;
+    padding: 0 0 0 15px;
     font-size: 16px;
-    margin-left: 10px;
 }
 
 #notes-container {
     display: flex;
     flex-wrap: wrap; /* Обеспечивает переход строк */
     padding: 20px;
+    gap: 20px;
+}
+.note {
+    flex: 1 0 22%; /* Устанавливает базовую ширину элемента и позволяет ему расти */
+    box-sizing: border-box; /* Учитывает отступы и границы */
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-items: center;
+    padding: 10px;
+}
+.note:hover {
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+}
+.note-title {
+    /* border: 1px solid red; */
+    background-color: #fff;
+    width: auto;
+    min-height: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 15px;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.note-body {
+    /* border: 1px solid red; */
+    background-color: #fff;
+    width: 100%;
+    height: 100px;
+    overflow: hidden;
+    margin-bottom: 15px;
+    padding: 15px;
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+.edit-note {
+    /* border: 1px solid red; */
+    background-color: #fff;
+    color: var(--color5);
+    font-size: 15px;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
+}
+.delete-note {
+    /* border: 1px solid red; */
+    background-color: #fff;
+    color: var(--color5);
+    font-size: 15px;
+    padding: 5px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+    /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px; */
 }
 
-.note {
-    flex: 1 0 18%; /* Устанавливает базовую ширину элемента и позволяет ему расти */
-    box-sizing: border-box; /* Учитывает отступы и границы */
-    margin: 10px;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+.edit-note:hover,
+.delete-note:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .popup {
@@ -58,40 +193,129 @@ input[type="text"] {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.87);
 }
-
 .popup-content {
-    background-color: #fff;
-    margin: 15% auto;
-    padding: 20px;
+    background-color: var(--color3);
+    height: 40%; 
+    margin: 10% auto;
     border-radius: 5px;
-    width: 80%;
-    max-width: 500px;
+    width: 100%;
+    max-width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: start;
+    align-items: center;
+    padding: 20px;
 }
 
-.close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
+#note-title {
+    width: 100%;
+    height: 10%;
+    border-radius: 5px;
+    /* color: #fff; */
+    margin: 0;
+    padding: 10px;
 }
 
-.close-btn:hover,
-.close-btn:focus {
-    color: black;
-    text-decoration: none;
-    cursor: pointer;
+.note-body_textarea {
+    width: 100%;
+    height: 60%;
+    font-size: 16px;
+    border-radius: 5px;
+    /* color: #fff; */
+    resize: none;
+    padding: 10px;
 }
 
 .color-picker {
-    margin: 15px 0;
+    width: 15%;
 }
 
-textarea {
-    width: 100%;
-    height: 100px;
-    margin-bottom: 10px;
+.close-btn {
+    background-color: #fff;
+    color: var(--color5);
+    font-size: 15px;
     padding: 5px;
-    font-size: 16px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+.save-btn {
+    background-color: #fff;
+    color: var(--color5);
+    font-size: 15px;
+    padding: 5px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+.close-btn:hover,
+.save-btn:hover {
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+
+
+/* Медиазапрос для планшетов (ширина экрана 768px и меньше) */
+@media (max-width: 768px) {
+    
+}
+
+/* Медиазапрос для мобильных устройств (ширина экрана 480px и меньше) */
+@media (max-width: 480px) {
+    header {
+        height: auto;
+    }
+    nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: start;
+        gap: 0;
+        padding: 0;
+        margin: 0;
+    }
+    button {
+        /* border: 1px solid red; */
+        width: 18%;
+        margin: 10px;
+    }
+    button:hover {
+        color: none;
+    }
+    .reply {
+        /* border: 1px solid rgb(128, 255, 0);  */
+    }
+    #note-search {
+        width: 80%;
+        margin: 10px auto;
+        height: 30px;
+        /* border: 1px solid rgb(128, 255, 0); */
+    }
+
+    .popup-content {
+        height: 60%; 
+        width: 100%;
+        max-width: 80%;
+    }
+    .close-btn {
+        font-size: 15px;
+        padding: 15px;
+        margin-left: 10px;
+        /* border: 1px solid rgb(128, 255, 0); */
+    }
+    .save-btn {
+        font-size: 15px;
+        padding: 15px;
+        margin-left: 70px;
+        /* border: 1px solid rgb(128, 255, 0); */
+    }
+    .close-btn:hover,
+    .save-btn:hover {
+        box-shadow: none;
+    }
 }
