--- a/styles.css
+++ b/styles.css
@@ -50,16 +50,19 @@ body {
     font-family: Arial, sans-serif;
 }
 header {
+    position: sticky;
     display: flex;
     justify-content: center;
     align-items: center;
     background: var(--color5);
     /* color: #fff; */
+    top: 0.1px;
     width: 100%;
     height: 70px;
     /* border: 1px solid red; */
 }
 nav {
+    
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
@@ -279,9 +282,9 @@ input[type="text"] {
         padding: 0;
         margin: 0;
     }
-    button {
+    nav button {
         /* border: 1px solid red; */
-        width: 18%;
+        width: 7%;
         margin: 10px;
     }
     button:hover {
@@ -289,6 +292,9 @@ input[type="text"] {
     }
     .reply {
         /* border: 1px solid rgb(128, 255, 0);  */
+    }
+    .create {
+        font-size: 30px;
     }
     #note-search {
         width: 80%;
@@ -298,20 +304,34 @@ input[type="text"] {
     }
 
     .popup-content {
-        height: 60%; 
+        height: 70%; 
         width: 100%;
-        max-width: 80%;
+        max-width: 90%;
+        justify-content: start;
+    }
+    .color-picker {
+        /* border: 1px solid rgb(0, 247, 255); */
+        width: 40%;
+        color: var(--color5);
+        font-size: 15px;
+    }
+    #note-color {
+        /* border: 1px solid rgb(255, 21, 0); */
+        height: 35px;
+        border-radius: 5px;
+        color: var(--color5);
+        font-size: 15px;
     }
     .close-btn {
         font-size: 15px;
-        padding: 15px;
-        margin-left: 10px;
+        padding: 10px;
+        /* margin-left: 10px; */
         /* border: 1px solid rgb(128, 255, 0); */
     }
     .save-btn {
         font-size: 15px;
-        padding: 15px;
-        margin-left: 70px;
+        padding: 10px;
+        /* margin-left: 10px; */
         /* border: 1px solid rgb(128, 255, 0); */
     }
     .close-btn:hover,
