--- a/styles.css
+++ b/styles.css
@@ -58,6 +58,7 @@ header {
     /* color: #fff; */
     top: 0.1px;
     width: 100%;
+    min-width: 300px;
     height: 70px;
     /* border: 1px solid red; */
 }
@@ -129,6 +130,7 @@ input[type="text"] {
     justify-content: start;
     align-items: center;
     padding: 10px;
+    min-width: 300px;
 }
 .note:hover {
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
@@ -270,7 +272,7 @@ input[type="text"] {
 }
 
 /* Медиазапрос для мобильных устройств (ширина экрана 480px и меньше) */
-@media (max-width: 480px) {
+@media (max-width: 768px) {
     header {
         height: auto;
     }
