--- a/styles.css
+++ b/styles.css
@@ -144,11 +144,6 @@ input[type="text"] {
     height: 30px;
 }
 
-.highlight {
-    background-color: rgb(229, 255, 0); /* Подсветка фоном */
-    font-weight: bold; /* Можно выделить текст жирным */
-}
-
 #notes-container {
     display: flex;
     flex-wrap: wrap; /* Обеспечивает переход строк */
@@ -315,7 +310,7 @@ input[type="text"] {
         /* display: flex;
         flex-wrap: wrap;
         justify-content: start; */
-        width: 100%;
+        width: 95%;
         gap: 0;
         padding: 0;
         margin: 0;
@@ -326,7 +321,7 @@ input[type="text"] {
         grid-column-end: 2;
         grid-row-start: 1;
         grid-row-end: 1;
-        gap: 15px;
+        gap: 5px;
     }
     .nav-two {
         grid-column-start: 3;
@@ -336,7 +331,7 @@ input[type="text"] {
         display: flex;
         flex-flow: column;
         justify-content: center;
-        align-items: normal;
+        align-items: start;
         gap: 0;
     }
     .nav-thre {
