--- a/styles.css
+++ b/styles.css
@@ -231,7 +231,7 @@ input[type="text"] {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.87);
+    background-color: var(--color5);
 }
 .popup-content {
     background-color: var(--color3);
@@ -298,7 +298,128 @@ input[type="text"] {
 }
 
 
+
+
+
+
+
+
+
+
+/* Модальное окно предупреждающее об удалении заметки */
+/* ======================================================== */
+.modal {
+    display: none; 
+    position: fixed; 
+    z-index: 10001; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%; 
+    overflow: auto; 
+    background-color: var(--color5);
+}
+
+.modal-content {
+    background-color: var(--color3);
+    margin: 15% auto; 
+    padding: 20px;
+    border: 1px solid var(--color5);
+    width: 30%; 
+    /* border: 1px solid red; */
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    border-radius: 5px;
+}
+.modal-content h4 {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    /* border: 1px solid rgb(229, 255, 0); */
+}
+.modal-content h4 .fa-solid {
+    font-size: 80px;
+    color: var(--color1);
+}
+.modal-content p {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 30px;
+    color: #000;
+    /* border: 1px solid rgb(255, 0, 170); */
+}
+.modal-content_button {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 100%;
+    /* border: 1px solid red; */
+}
+.modal-content #confirmDelete {
+    /* border: 1px solid red; */
+    background-color: #fff;
+    color: var(--color5);
+    font-size: 25px;
+    padding: 5px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+
+.modal-content #cancelDelete {
+    /* border: 1px solid red; */
+    background-color: #fff;
+    color: var(--color5);
+    font-size: 25px;
+    padding: 5px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+/* ======================================================== */
+
+/* модальное окно предупреждение о дублировании заголовка */
+/* ======================================================== */
+
+#notificationMessage {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    font-size: 30px;
+    color: #000;
+    /* border: 1px solid rgb(255, 0, 170); */
+}
+
+.modal-content #closeNotification {
+    /* border: 1px solid red; */
+    background-color: #fff;
+    color: var(--color5);
+    font-size: 25px;
+    padding: 5px 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 5px;
+}
+/* ======================================================== */
+
+
 /* Медиазапрос для мобильных устройств (ширина экрана 480px и меньше) */
+/* ======================================================== */
 @media (max-width: 768px) {
     header {
         height: auto;
@@ -397,4 +518,25 @@ input[type="text"] {
     .save-btn:hover {
         box-shadow: none;
     }
+
+    .modal-content {
+        width: 80%; 
+        gap: 50px;
+    }
+    .modal-content h4 .fa-solid {
+        font-size: 120px;
+    }
+    .modal-content p {
+        font-size: 20px;
+    }
+    #notificationMessage {
+        font-size: 20px;
+    }
+    .modal-content #confirmDelete,
+    .modal-content #cancelDelete,
+    .modal-content #closeNotification {
+        font-size: 20px;
+        padding: 5px 25px;
+    }
 }
+/* ======================================================== */
